# Flicka

./: .gitignore  BeforeRelease.hpp  CMakeLists.txt  Global.hpp  README.md  main.cpp
Compare/: CompareWindow.cpp  CompareWindow.hpp  CompareWindow.ui
Docs/: TODO
DropWindow/: DropBox.cpp  DropWindow.cpp  DropWindow.hpp  DropWindow.ui
FileDrop/: DropLabel.cpp  DropLabel.hpp  DropWindow.cpp  DropWindow.hpp  DropWindow.ui
Resources/Icon/: Icons.qrc  Icons.rc
UI/: CompareWindow.cpp  CompareWindow.hpp  CompareWindow.ui  DropBox.cpp  DropBox.hpp  DropWindow.cpp  DropWindow.hpp  DropWindow.ui  MainWindow.hpp
